# pigeomatic

./: .gitignore  CHANGELOG.md  NOTICE  README.md  pigeomatic.cabal
lambdas/: .gitignore  Dockerfile  package-lock.json  package.json  serverless.yml
lambdas/handlers/: renderAdultPGN.js  renderPGN.js
lambdas/lib/: pigeonDNA.js  pigeonRendering.js
lambdas/utils/: renderPGNS.js
site/: index.html  styles.css
src/Pigeomatic/: GenoLib.hs  Pigeon.hs  PigeonDNA.hs  Utils.hs
test/: Spec.hs
test/Spec/: GenoLib.hs  Pigeon.hs  Utils.hs
