cabal-version:      2.4
name:               pigeomatic
version:            0.1.0.0

synopsis: Pigeons (PGN) NFTs

description:
    Pigeons (PGNs), breedable NFTs in Cardano
    
license: Apache-2.0
license-files:
    LICENSE
    NOTICE

author:             ecabello@valtamtechnologies.com
maintainer:         ecabello@valtamtechnologies.com

copyright: Copyright 2021 Valtam Technologies, LLC
category: Language
build-type: Simple
extra-source-files: CHANGELOG.md


common lang
    default-language: Haskell2010

library
    import: lang
    hs-source-dirs: src
    default-language: Haskell2010
    exposed-modules:
        Pigeomatic.Utils
        Pigeomatic.GenoLib
        Pigeomatic.PigeonDNA
        Pigeomatic.Pigeon
    build-depends:    
        base ^>=4.15.0.0,
        time -any,
        bytestring -any,
        utf8-string -any,
        aeson -any,
        mersenne-random-pure64 -any,
        cryptonite -any

test-suite pigeomatic-test
    import: lang
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    other-modules:
        Spec.Utils
        Spec.GenoLib
        Spec.Pigeon
    build-depends:
        base ^>=4.15.0.0,
        time -any,
        pigeomatic -any,
        tasty -any,
        tasty-smallcheck -any,
        tasty-quickcheck -any,
        tasty-hunit -any